<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="@dimen/height_head_nav_view"
    android:layout_width="match_parent"
    android:paddingStart="@dimen/padding_nav_view"
    android:paddingEnd="@dimen/padding_nav_view"
    android:orientation="vertical"
    android:gravity="bottom|start"
    android:background="@drawable/header_nav_view_image"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <android.support.v7.widget.CardView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:elevation="12dp"
        app:cardCornerRadius="32dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9">
        <ImageView
            android:id="@+id/nav_header_my_photo"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:src="@drawable/my_photo">
        </ImageView>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_head_subtitle_nav_view"
        android:gravity="start|center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_email"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
</LinearLayout>