...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.taleckij_anton.taleckijapp.LauncherActivity"
    android:fitsSystemWindows="true"
    android:id="@+id/launcher">
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_parent_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
...
