<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/wp_bottom_space">
    <FrameLayout
        android:id="@+id/layout_radio_layout_one"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:gravity="center">
                <RadioButton android:id="@+id/radio_layout_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginStart="@dimen/margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usual_layout_name_text"
                    android:textSize="@dimen/views_name_text_size"/>
            </LinearLayout>
            <TextView
                android:id="@+id/usual_layout_port_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portrait_usual_text"
                android:textSize="@dimen/views_desc_text_size"/>
            <TextView
                android:id="@+id/usual_layout_land_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landscape_usual_text"
                android:textSize="@dimen/views_desc_text_size"/>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/layout_radio_layout_two"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/radio_layout_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginStart="@dimen/margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compact_layout_name_text"
                    android:textSize="@dimen/views_name_text_size"/>
            </LinearLayout>
            <TextView
                android:id="@+id/compact_layout_port_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portrait_compact_text"
                android:textSize="@dimen/views_desc_text_size"/>
            <TextView
                android:id="@+id/compact_layout_land_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landscape_compact_text"
                android:textSize="@dimen/views_desc_text_size"/>
        </LinearLayout>
    </FrameLayout>
</RadioGroup>
<Button
    android:id="@+id/wp_finish_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:text="@string/finish_button_text"
    android:layout_gravity="bottom|end"
    style="@style/Widget.AppCompat.Button.Colored"/>
</FrameLayout>