...
        android:background="@drawable/border">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <RadioButton android:id="@+id/radio_theme_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginStart="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <RadioButton
                android:id="@+id/radio_theme_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginStart="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
